[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skbuild-conditional-scripts"
version = "1.0.0"
description = "Conditional entry point script provider for scikit-build-core"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Adobe Type team & friends", email = "afdko@adobe.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Framework :: Scikit-build",
]
